@@ -4,6 +4,7 @@ date Version 3.00.49 (RC2)
 * wxStdDialogButtonSizer events now Connect() to the button, instead of the parent.
 * Fixed "default" property for wxButton and wxBitmapButton.
 * Fixed missing bitmap properties on wxBitmapButton.
+* Applied patch from Ho Yin Kwok to check if the clipboard is open before opening it.
 
 08/21/2007 Version 3.00.48 (RC1)
 + FS#227 - "Custom control class name"
